Adicionando a função REST POST para trabalhar diretamente com as requisições HTTP enviadas do SpringBoot

--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@ OPENAI_API_KEY=sua_chave_openai_aqui
 # Porta padrão é 5000, mas você pode alterá-la se necessário
 PORT=5000
 
-# Integração com Spring Boot
-# URL da API Spring Boot para envio de análises (quando aplicável)
-SPRING_API_URL=http://localhost:8080
+# URL do servidor Spring Boot para integração
+# Exemplo: http://localhost:8080/api
+SPRING_API_URL=http://sua-url-spring-aqui/api
